increased movement speed

--- a/_posts/2023-10-12-teamwork.md
+++ b/_posts/2023-10-12-teamwork.md
@@ -35,9 +35,9 @@ courses: { compsci: {week: 7} }
         let isMovingRight = false;
         let isIdle = true;
 
-        const gravity = 0.5;
-        const jumpStrength = -10;
-        const moveSpeed = 8;
+        const gravity = 0.7; // Increased gravity for faster fall
+        const jumpStrength = -15; // Increased jump strength for higher jumps
+        const moveSpeed = 15; // Increased move speed
 
         function updateSpriteAnimation() {
             if (frameX < maxFrame) {
@@ -120,8 +120,6 @@ courses: { compsci: {week: 7} }
 
             var platforms = [];
 
-            const jumpStrength = -10;
-
             function generateRandomPlatform() {
                 var platform = {
                     width: 150,
@@ -147,7 +145,6 @@ courses: { compsci: {week: 7} }
             setInterval(generateRandomPlatform, 1200);
 
             function checkCollisions() {
-                // Check collisions between the sprite and platforms
                 platforms.forEach(function (platform) {
                     if (
                         spriteX + spriteWidth > platform.x &&
@@ -155,7 +152,6 @@ courses: { compsci: {week: 7} }
                         spriteY + spriteHeight > platform.y &&
                         spriteY < platform.y
                     ) {
-                        // Collision detected, set the sprite on the platform
                         spriteY = platform.y - spriteHeight;
                         isJumping = false;
                         spriteVelocityY = 0;
