removed double jump mechanism

--- a/_posts/2023-10-12-teamwork.md
+++ b/_posts/2023-10-12-teamwork.md
@@ -28,6 +28,7 @@ courses: { compsci: {week: 7} }
         let spriteY = canvas.height - spriteHeight;
         let spriteVelocityY = 0;
         let isJumping = false;
+        let isOnGround = false; // Variable to track if the sprite is on the ground
         let frameX = 0;
         let frameY = 0;
         let maxFrame = 2;
@@ -35,9 +36,9 @@ courses: { compsci: {week: 7} }
         let isMovingRight = false;
         let isIdle = true;
 
-        const gravity = 0.7; // Increased gravity for faster fall
-        const jumpStrength = -15; // Increased jump strength for higher jumps
-        const moveSpeed = 15; // Increased move speed
+        const gravity = 0.7;
+        const jumpStrength = -15;
+        const moveSpeed = 15;
 
         function updateSpriteAnimation() {
             if (frameX < maxFrame) {
@@ -48,9 +49,10 @@ courses: { compsci: {week: 7} }
         }
 
         function jump() {
-            if (!isJumping) {
+            if (!isJumping && isOnGround) { // Check if it's on the ground before jumping
                 spriteVelocityY = jumpStrength;
                 isJumping = true;
+                isOnGround = false;
             }
         }
 
@@ -75,7 +77,7 @@ courses: { compsci: {week: 7} }
         }
 
         window.addEventListener('keydown', (event) => {
-            if (event.key === 'w' && !isJumping) {
+            if (event.key === 'w') {
                 jump();
             } else if (event.key === 'a') {
                 moveLeft();
@@ -155,6 +157,7 @@ courses: { compsci: {week: 7} }
                         spriteY = platform.y - spriteHeight;
                         isJumping = false;
                         spriteVelocityY = 0;
+                        isOnGround = true; // Set the sprite on the ground
                     }
                 });
             }
@@ -202,6 +205,7 @@ courses: { compsci: {week: 7} }
                     spriteY = canvas.height - spriteHeight;
                     spriteVelocityY = 0;
                     isJumping = false;
+                    isOnGround = true;
                 }
 
                 if (isMovingLeft && spriteX > 0) {
