increased falling speed

--- a/_posts/2023-10-12-teamwork.md
+++ b/_posts/2023-10-12-teamwork.md
@@ -28,7 +28,7 @@ courses: { compsci: {week: 7} }
         let spriteY = canvas.height - spriteHeight;
         let spriteVelocityY = 0;
         let isJumping = false;
-        let isOnGround = false; // Variable to track if the sprite is on the ground
+        let isOnGround = false;
         let frameX = 0;
         let frameY = 0;
         let maxFrame = 2;
@@ -36,9 +36,9 @@ courses: { compsci: {week: 7} }
         let isMovingRight = false;
         let isIdle = true;
 
-        const gravity = 0.7;
+        const gravity = 0.9; // Increased gravity for faster falling
         const jumpStrength = -15;
-        const moveSpeed = 15;
+        const moveSpeed = 20; // Increased move speed
 
         function updateSpriteAnimation() {
             if (frameX < maxFrame) {
@@ -49,7 +49,7 @@ courses: { compsci: {week: 7} }
         }
 
         function jump() {
-            if (!isJumping && isOnGround) { // Check if it's on the ground before jumping
+            if (!isJumping && isOnGround) {
                 spriteVelocityY = jumpStrength;
                 isJumping = true;
                 isOnGround = false;
@@ -157,7 +157,7 @@ courses: { compsci: {week: 7} }
                         spriteY = platform.y - spriteHeight;
                         isJumping = false;
                         spriteVelocityY = 0;
-                        isOnGround = true; // Set the sprite on the ground
+                        isOnGround = true;
                     }
                 });
             }
