added falling for left and right movement

--- a/_posts/2023-10-12-teamwork.md
+++ b/_posts/2023-10-12-teamwork.md
@@ -36,8 +36,8 @@ courses: { compsci: {week: 7} }
         let isMovingRight = false;
         let isIdle = true;
 
-        const gravity = 0.9; // Increased gravity for faster falling
-        const jumpStrength = -15;
+        const gravity = 1.5; // Increased gravity for faster falling
+        const jumpStrength = -20; // Increased jump strength
         const moveSpeed = 20; // Increased move speed
 
         function updateSpriteAnimation() {
@@ -235,3 +235,4 @@ courses: { compsci: {week: 7} }
     </script>
 </body>
 </html>
+
