optimized collision hitbox

--- a/_posts/2023-10-12-teamwork.md
+++ b/_posts/2023-10-12-teamwork.md
@@ -146,15 +146,16 @@ courses: { compsci: {week: 7} }
 
             setInterval(generateRandomPlatform, 1200);
 
-            function checkCollisions() {
+           function checkCollisions() {
                 platforms.forEach(function (platform) {
-                    if (
-                        spriteX + spriteWidth > platform.x &&
-                        spriteX < platform.x + platform.width &&
-                        spriteY + spriteHeight > platform.y &&
-                        spriteY < platform.y
-                    ) {
-                        spriteY = platform.y - spriteHeight;
+                    const spriteBottom = spriteY + spriteHeight;
+                    const platformTop = platform.y;
+                    const spriteRight = spriteX + spriteWidth;
+                    const platformLeft = platform.x;
+                    const platformRight = platform.x + platform.width;
+
+                    if (spriteBottom >= platformTop && spriteY < platformTop && spriteX < platformRight && spriteRight > platformLeft) {
+                        spriteY = platformTop - spriteHeight;
                         isJumping = false;
                         spriteVelocityY = 0;
                         isOnGround = true;
@@ -235,4 +236,3 @@ courses: { compsci: {week: 7} }
     </script>
 </body>
 </html>
-
