limited spawning range for platforms

--- a/_posts/2023-10-12-teamwork.md
+++ b/_posts/2023-10-12-teamwork.md
@@ -123,11 +123,15 @@ courses: { compsci: {week: 7} }
             var platforms = [];
 
             function generateRandomPlatform() {
+                // Calculate the maximum height for the platform
+                const maxHeight = spriteY - jumpStrength;
+
+                // Define the platform properties
                 var platform = {
                     width: 150,
                     height: 20,
                     x: Math.random() * (canvas.width - 150),
-                    y: canvas.height - Math.random() * (canvas.height)
+                    y: maxHeight - Math.random() * (maxHeight)
                 };
                 platforms.push(platform);
 
@@ -146,7 +150,7 @@ courses: { compsci: {week: 7} }
 
             setInterval(generateRandomPlatform, 1200);
 
-           function checkCollisions() {
+            function checkCollisions() {
                 platforms.forEach(function (platform) {
                     const spriteBottom = spriteY + spriteHeight;
                     const platformTop = platform.y;
