altered spawn limits for platforms

--- a/_posts/2023-10-12-teamwork.md
+++ b/_posts/2023-10-12-teamwork.md
@@ -123,15 +123,16 @@ courses: { compsci: {week: 7} }
             var platforms = [];
 
             function generateRandomPlatform() {
-                // Calculate the maximum height for the platform
-                const maxHeight = spriteY - jumpStrength;
+                // Calculate the maximum height for the platform, considering a minimum jump height
+                const minHeight = spriteY - jumpStrength;
+                const maxHeight = spriteY - 2 * jumpStrength;
 
                 // Define the platform properties
                 var platform = {
                     width: 150,
                     height: 20,
                     x: Math.random() * (canvas.width - 150),
-                    y: maxHeight - Math.random() * (maxHeight)
+                    y: minHeight - Math.random() * (maxHeight - minHeight)
                 };
                 platforms.push(platform);
 
