increased falling speed

--- a/_posts/2023-10-12-teamwork.md
+++ b/_posts/2023-10-12-teamwork.md
@@ -36,9 +36,9 @@ courses: { compsci: {week: 7} }
         let isMovingRight = false;
         let isIdle = true;
 
-        const gravity = 1.5; // Increased gravity for faster falling
+        const gravity = 2.5; // Increased gravity for even faster falling
         const jumpStrength = -20; // Increased jump strength
-        const moveSpeed = 20; // Increased move speed
+        const moveSpeed = 20;
 
         function updateSpriteAnimation() {
             if (frameX < maxFrame) {
@@ -241,3 +241,4 @@ courses: { compsci: {week: 7} }
     </script>
 </body>
 </html>
+
