optimized scrolling speed

--- a/_posts/2023-10-12-teamwork.md
+++ b/_posts/2023-10-12-teamwork.md
@@ -40,6 +40,8 @@ courses: { compsci: {week: 7} }
         const jumpStrength = -20;
         const moveSpeed = 20;
 
+        const backgroundSpeed = 8; // Slightly slower background scroll speed
+
         // Define a narrower collision hitbox
         const collisionWidth = 20;
         const collisionHeight = 20;
@@ -177,9 +179,9 @@ courses: { compsci: {week: 7} }
             }
 
             var interval = setInterval(function () {
-                bg1.y += 5;
-                bg2.y += 5;
-                bg3.y += 5;
+                bg1.y += backgroundSpeed; // Slower background scroll
+                bg2.y += backgroundSpeed;
+                bg3.y += backgroundSpeed;
 
                 if (bg1.y == 2000) {
                     bg1.y = 0;
@@ -209,7 +211,7 @@ courses: { compsci: {week: 7} }
                         c.fillStyle = "yellow";
                         c.fillRect(platform.x, platform.y, platform.width, platform.height);
                     }
-                    platform.y += 5;
+                    platform.y += backgroundSpeed; // Match platform speed with background
                 });
 
                 spriteVelocityY += gravity;
