added trampoline physics

--- a/_posts/2023-10-12-teamwork.md
+++ b/_posts/2023-10-12-teamwork.md
@@ -35,12 +35,15 @@ courses: { compsci: {week: 7} }
         let isMovingLeft = false;
         let isMovingRight = false;
         let isIdle = true;
+        
+        // Define background scroll speed variables
+        const baseBackgroundSpeed = 5;  // Base background scroll speed
+        const boostBackgroundSpeed = 20;  // Background scroll speed during a boost
+        let backgroundSpeed = baseBackgroundSpeed;  // Current background scroll speed
 
         const gravity = 2.5;
         const jumpStrength = -20;
         const moveSpeed = 20;
-
-        const backgroundSpeed = 8; // Slightly slower background scroll speed
 
         // Define a narrower collision hitbox
         const collisionWidth = 20;
@@ -179,7 +182,7 @@ courses: { compsci: {week: 7} }
             }
 
             var interval = setInterval(function () {
-                bg1.y += backgroundSpeed; // Slower background scroll
+                bg1.y += backgroundSpeed;
                 bg2.y += backgroundSpeed;
                 bg3.y += backgroundSpeed;
 
@@ -211,7 +214,32 @@ courses: { compsci: {week: 7} }
                         c.fillStyle = "yellow";
                         c.fillRect(platform.x, platform.y, platform.width, platform.height);
                     }
-                    platform.y += backgroundSpeed; // Match platform speed with background
+                    platform.y += backgroundSpeed;
+                });
+
+                // Check if sprite is on a trampoline and apply a boost
+                platforms.forEach(function (platform) {
+                    const spriteBottom = spriteY + spriteHeight;
+                    const platformTop = platform.y;
+                    const spriteCenterX = spriteX + spriteWidth / 2;
+                    const platformLeft = platform.x;
+                    const platformRight = platform.x + platform.width;
+
+                    if (
+                        platform.width === 20 &&  // Trampoline width
+                        spriteBottom >= platformTop &&
+                        spriteY < platformTop &&
+                        spriteCenterX > platformLeft &&
+                        spriteCenterX < platformRight
+                    ) {
+                        // Boost the sprite into the air
+                        spriteVelocityY = jumpStrength * 2;  // Increase boost strength
+                        isJumping = true;
+                        isOnGround = false;
+                        
+                        // Increase background scroll speed during boost
+                        backgroundSpeed = boostBackgroundSpeed;
+                    }
                 });
 
                 spriteVelocityY += gravity;
@@ -222,6 +250,9 @@ courses: { compsci: {week: 7} }
                     spriteVelocityY = 0;
                     isJumping = false;
                     isOnGround = true;
+                    
+                    // Restore the base background scroll speed
+                    backgroundSpeed = baseBackgroundSpeed;
                 }
 
                 if (isMovingLeft && spriteX > 0) {
